--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dashevo/dashd-rpc",
-  "description": "Dash Client Library to connect to Dash Core (dashd) via RPC",
+  "name": "@stashcore/stashd-rpc",
+  "description": "Stash Client Library to connect to Stash Core (stashd) via RPC",
   "version": "1.1.0",
   "author": {
     "name": "Stephen Pair",
@@ -29,12 +29,12 @@
     }
   ],
   "keywords": [
-    "dash",
+    "stash",
     "rpc"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dashevo/dashd-rpc"
+    "url": "https://github.com/stashpayio/stashd-rpc"
   },
   "license": "MIT",
   "main": "lib/index.js",
@@ -54,7 +54,7 @@
     "sinon": "^1.12.2"
   },
   "bugs": {
-    "url": "https://github.com/dashevo/dashd-rpc/issues"
+    "url": "https://github.com/stashpayio/stashd-rpc/issues"
   },
-  "homepage": "https://github.com/dashevo/dashd-rpc"
+  "homepage": "https://github.com/stashpayio/stashd-rpc"
 }
